initial      Initial version

upslug2_6    Added LE support